# Simple-3DRenderer-

./: CMakeLists.txt  README.md  Renderer3D.cpp  Renderer3D.h  main.cpp
